link a las redes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <!-- Footer actualizado -->
     <footer>
         <div class="redes">
-            <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/biandegirolamo" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/biancadegirolamo" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://wa.me/5493512643672" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         </div>
         <p>© 2025 Bianca De Girolamo Loss | Todos los derechos reservados</p>
